--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,30 +24,6 @@ services:
     image: arg_production_filter:latest
     links:
     - rabbitmq
-  best_and_worst_ratings_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/best_and_worst_ratings_aggregator/aggregator.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=best_and_worst_ratings_aggregator
-    links:
-    - rabbitmq
   client_1:
     build:
       context: .
@@ -72,10 +48,38 @@ services:
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=client_1
     volumes:
-    - ./files/long/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/credits.csv:/root/files/credits.csv
-    - ./files/long/ratings.csv:/root/files/ratings.csv
-    - ./results/long/results.json:/root/results/results.json
+    - ./files/short/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short/credits.csv:/root/files/credits.csv
+    - ./files/short/ratings.csv:/root/files/ratings.csv
+    - ./results/short/results.json:/root/results/results.json
+  client_2:
+    build:
+      context: .
+      dockerfile: client/client.dockerfile
+    container_name: client_2
+    depends_on:
+      client_decodifier:
+        condition: service_healthy
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - DECODIFIER_HOST=client_decodifier
+    - DECODIFIER_PORT=50000
+    - CLIENT_ID=2
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=client_2
+    volumes:
+    - ./files/short/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short/credits.csv:/root/files/credits.csv
+    - ./files/short/ratings.csv:/root/files/ratings.csv
+    - ./results/short/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
@@ -103,31 +107,6 @@ services:
       timeout: 2s
     ports:
     - 50000:50000
-  credits_joiner:
-    build:
-      context: .
-      dockerfile: joiner/credits/credits_joiner.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=credits_joiner
-    image: credits_joiner:latest
-    links:
-    - rabbitmq
   esp_production_filter:
     build:
       context: .
@@ -153,27 +132,6 @@ services:
     image: esp_production_filter:latest
     links:
     - rabbitmq
-  esp_production_filter_1:
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=esp_production_filter_1
-    image: esp_production_filter:latest
-    links:
-    - rabbitmq
   main_movie_filter:
     build:
       context: .
@@ -191,32 +149,11 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
+    - LOG_LEVEL=DEBUG
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=main_movie_filter
-    image: main_movie_filter:latest
-    links:
-    - rabbitmq
-  main_movie_filter_1:
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=main_movie_filter_1
     image: main_movie_filter:latest
     links:
     - rabbitmq
@@ -232,7 +169,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=1
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,main_movie_filter,esp_production_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -250,7 +187,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=2
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,main_movie_filter,esp_production_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -268,37 +205,12 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=3
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,main_movie_filter,esp_production_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator
     ports:
     - 50003:50003
     - 50013:50013
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  no_colab_productions_filter:
-    build:
-      context: .
-      dockerfile: filters/no_colab_productions/no_colab_productions_filter.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=no_colab_productions_filter
-    image: no_colab_productions_filter:latest
-    links:
-    - rabbitmq
   rabbitmq:
     build:
       context: ./rabbitmq
@@ -312,128 +224,6 @@ services:
     - 15672:15672
     volumes:
     - ./rabbitmq/config.ini:/config.ini
-  ratings_joiner:
-    build:
-      context: .
-      dockerfile: joiner/ratings/ratings_joiner.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=ratings_joiner
-    image: ratings_joiner:latest
-    links:
-    - rabbitmq
-  sentiment_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=sentiment_aggregator
-    links:
-    - rabbitmq
-  sentiment_filter:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=sentiment_filter
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  top_10_credits_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/top_10_credits_aggregator/aggregator.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=top_10_credits_aggregator
-    links:
-    - rabbitmq
-  top_5_countries_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/top_aggregator/aggregator.dockerfile
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=top_5_countries_aggregator
-    links:
-    - rabbitmq
   twentieth_century_arg_aggregator:
     build:
       context: .
@@ -504,27 +294,6 @@ services:
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_filter
-    image: twentieth_century_filter:latest
-    links:
-    - rabbitmq
-  twentieth_century_filter_1:
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=twentieth_century_filter_1
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
