--- a/config_short.yaml
+++ b/config_short.yaml
@@ -3,8 +3,6 @@ output_file: docker-compose.yaml
 clients:
   - id: 1
     files_path: ./files/short
-  - id: 2
-    files_path: ./files/short
 
 workers:
   twentieth_century:
@@ -20,11 +18,11 @@ workers:
     log_level: INFO
     kill: false
   no_colab_productions:
-    count: 0
+    count: 1
     log_level: INFO
     kill: false
   sentiment:
-    count: 0
+    count: 1
     log_level: INFO
     kill: false
   arg_production:
@@ -32,11 +30,11 @@ workers:
     log_level: INFO
     kill: false
   credits:
-    count: 0
+    count: 1
     log_level: INFO
     kill: false
   ratings:
-    count: 0
+    count: 1
     log_level: INFO
     kill: false
 
@@ -50,19 +48,19 @@ aggregators:
     log_level: INFO
     kill: true
   top_5_countries:
-    generate: false
+    generate: true
     log_level: INFO
     kill: false
   top_10_credits:
-    generate: false
+    generate: true
     log_level: INFO
     kill: false
   best_and_worst_ratings:
-    generate: false
+    generate: true
     log_level: INFO
     kill: false
   sentiment:
-    generate: false
+    generate: true
     log_level: INFO
     kill: false
 
