--- a/config_short.yaml
+++ b/config_short.yaml
@@ -3,6 +3,8 @@ output_file: docker-compose.yaml
 clients:
   - id: 1
     files_path: ./files/short
+  - id: 2
+    files_path: ./files/short
 
 workers:
   twentieth_century:
