--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -17,8 +19,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=arg_production_filter
     image: arg_production_filter:latest
@@ -36,6 +38,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -43,8 +47,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
@@ -65,13 +69,15 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
     - CLIENT_ID=1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=client_1
     volumes:
@@ -118,13 +124,15 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
     environment:
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=client_decodifier
     healthcheck:
@@ -146,6 +154,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -153,33 +163,11 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=credits_joiner
     - AGGREGATOR_HOST=aggregator_top_10
-    - AGGREGATOR_PORT=60002
-    image: credits_joiner:latest
-    links:
-    - rabbitmq
-  credits_joiner_1:
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=credits_joiner_1
     - AGGREGATOR_PORT=60002
     image: credits_joiner:latest
     links:
@@ -195,6 +183,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -202,10 +192,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=esp_production_filter
+    image: esp_production_filter:latest
+    links:
+    - rabbitmq
+  esp_production_filter_1:
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      monitor_4:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter_1
     image: esp_production_filter:latest
     links:
     - rabbitmq
@@ -220,17 +233,42 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=DEBUG
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=main_movie_filter
+    image: main_movie_filter:latest
+    links:
+    - rabbitmq
+  main_movie_filter_1:
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      monitor_4:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter_1
     image: main_movie_filter:latest
     links:
     - rabbitmq
@@ -245,8 +283,8 @@ services:
     - HEARTBEAT_INTERVAL=5000
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=1
-    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,arg_production_filter,credits_joiner,credits_joiner_1,ratings_joiner,main_movie_filter,esp_production_filter,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3,monitor_4
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -263,8 +301,8 @@ services:
     - HEARTBEAT_INTERVAL=5000
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=2
-    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,arg_production_filter,credits_joiner,credits_joiner_1,ratings_joiner,main_movie_filter,esp_production_filter,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3,monitor_4
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -281,11 +319,29 @@ services:
     - HEARTBEAT_INTERVAL=5000
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=3
-    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,arg_production_filter,credits_joiner,credits_joiner_1,ratings_joiner,main_movie_filter,esp_production_filter,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3,monitor_4
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
     ports:
     - 50003:50003
     - 50013:50013
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  monitor_4:
+    build:
+      context: .
+      dockerfile: monitor/monitor_cluster.dockerfile
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_SERVICE_PORT=50004
+    - MONITOR_CLUSTER_PORT=50014
+    - HEARTBEAT_INTERVAL=5000
+    - HEARTBEAT_TIMEOUT=15000
+    - MONITOR_NODE_ID=4
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3,monitor_4
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    ports:
+    - 50004:50004
+    - 50014:50014
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   no_colab_productions_filter:
@@ -299,6 +355,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -306,8 +364,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=no_colab_productions_filter
     image: no_colab_productions_filter:latest
@@ -337,6 +395,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -344,8 +404,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=ratings_joiner
     - RATINGS_AGGREGATOR_HOST=best_and_worst_ratings_aggregator
@@ -364,6 +424,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -371,8 +433,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=sentiment_aggregator
     links:
@@ -388,6 +450,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -395,8 +459,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=sentiment_filter
     image: sentiment_filter:latest
@@ -414,6 +478,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -421,8 +487,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=top_10_credits_aggregator
     links:
@@ -440,6 +506,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -447,8 +515,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=top_5_countries_aggregator
     links:
@@ -464,6 +532,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -471,8 +541,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_arg_aggregator
     links:
@@ -488,6 +558,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -495,8 +567,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_arg_esp_aggregator
     links:
@@ -512,6 +584,8 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -519,10 +593,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_filter
+    image: twentieth_century_filter:latest
+    links:
+    - rabbitmq
+  twentieth_century_filter_1:
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      monitor_4:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter_1
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
@@ -537,9 +634,11 @@ services:
         condition: service_started
       monitor_3:
         condition: service_started
+      monitor_4:
+        condition: service_started
     environment:
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3,monitor_4
+    - MONITOR_PORTS=50001,50002,50003,50004
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=worker
     image: worker:latest
