--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -160,29 +160,6 @@ services:
     image: credits_joiner:latest
     links:
     - rabbitmq
-  credits_joiner_2:
-    container_name: credits_joiner_2
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=credits_joiner_2
-    image: credits_joiner:latest
-    links:
-    - rabbitmq
   esp_production_filter:
     build:
       context: .
@@ -248,7 +225,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=1
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,credits_joiner,credits_joiner_2,ratings_joiner,ratings_joiner_2,ratings_joiner_3,main_movie_filter,esp_production_filter,no_colab_productions_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,credits_joiner,ratings_joiner,ratings_joiner_2,ratings_joiner_3,main_movie_filter,esp_production_filter,no_colab_productions_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -267,7 +244,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=2
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,credits_joiner,credits_joiner_2,ratings_joiner,ratings_joiner_2,ratings_joiner_3,main_movie_filter,esp_production_filter,no_colab_productions_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,credits_joiner,ratings_joiner,ratings_joiner_2,ratings_joiner_3,main_movie_filter,esp_production_filter,no_colab_productions_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -286,7 +263,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=3
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,credits_joiner,credits_joiner_2,ratings_joiner,ratings_joiner_2,ratings_joiner_3,main_movie_filter,esp_production_filter,no_colab_productions_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,twentieth_century_filter,arg_production_filter,credits_joiner,ratings_joiner,ratings_joiner_2,ratings_joiner_3,main_movie_filter,esp_production_filter,no_colab_productions_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50003:50003
     - 50013:50013
@@ -323,10 +300,10 @@ services:
       context: ./rabbitmq
       dockerfile: rabbitmq.dockerfile
     healthcheck:
-      interval: 10s
-      retries: 10
+      interval: 5s
+      retries: 20
       test: rabbitmq-diagnostics check_port_connectivity
-      timeout: 5s
+      timeout: 1s
     ports:
     - 15672:15672
     volumes:
