--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -18,9 +14,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=arg_production_filter_1
     image: arg_production_filter:latest
     links:
@@ -33,10 +29,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -44,9 +36,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
@@ -60,24 +52,20 @@ services:
         condition: service_healthy
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
     - CLIENT_ID=1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=client_1
     volumes:
-    - ./files/long/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/credits.csv:/root/files/credits.csv
-    - ./files/long/ratings.csv:/root/files/ratings.csv
-    - ./results/long/results.json:/root/results/results.json
+    - ./files/short/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short/credits.csv:/root/files/credits.csv
+    - ./files/short/ratings.csv:/root/files/ratings.csv
+    - ./results/short/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
@@ -86,22 +74,18 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
     environment:
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=client_decodifier
     healthcheck:
       interval: 5s
-      retries: 10
+      retries: 50
       test: netstat -ltn | grep -c 5000
       timeout: 2s
     ports:
@@ -114,10 +98,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -126,9 +106,9 @@ services:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
     - JOINER_INSTANCE_ID=credits-1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=credits_joiner_1
     image: credits_joiner:latest
     links:
@@ -141,10 +121,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -152,33 +128,10 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=esp_production_filter_1
-    image: esp_production_filter:latest
-    links:
-    - rabbitmq
-  esp_production_filter_2:
-    container_name: esp_production_filter_2
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=esp_production_filter_2
     image: esp_production_filter:latest
     links:
     - rabbitmq
@@ -190,44 +143,17 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - LOG_LEVEL=DEBUG
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=main_movie_filter_1
-    image: main_movie_filter:latest
-    links:
-    - rabbitmq
-  main_movie_filter_2:
-    container_name: main_movie_filter_2
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=main_movie_filter_2
     image: main_movie_filter:latest
     links:
     - rabbitmq
@@ -240,55 +166,15 @@ services:
     - PYTHONUNBUFFERED=1
     - MONITOR_SERVICE_PORT=50001
     - MONITOR_CLUSTER_PORT=50011
-    - HEARTBEAT_INTERVAL=100
-    - HEARTBEAT_TIMEOUT=3000
-    - ELECTION_TIMEOUT=1000
+    - HEARTBEAT_INTERVAL=2000
+    - HEARTBEAT_TIMEOUT=8000
+    - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=1
-    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - MONITOR_CLUSTER_NODES=monitor_1
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,esp_production_filter_1,no_colab_productions_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50001:50001
     - 50011:50011
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-  monitor_2:
-    build:
-      context: .
-      dockerfile: monitor/monitor_cluster.dockerfile
-    container_name: monitor_2
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_SERVICE_PORT=50002
-    - MONITOR_CLUSTER_PORT=50012
-    - HEARTBEAT_INTERVAL=100
-    - HEARTBEAT_TIMEOUT=3000
-    - ELECTION_TIMEOUT=1000
-    - MONITOR_NODE_ID=2
-    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
-    ports:
-    - 50002:50002
-    - 50012:50012
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-  monitor_3:
-    build:
-      context: .
-      dockerfile: monitor/monitor_cluster.dockerfile
-    container_name: monitor_3
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_SERVICE_PORT=50003
-    - MONITOR_CLUSTER_PORT=50013
-    - HEARTBEAT_INTERVAL=100
-    - HEARTBEAT_TIMEOUT=3000
-    - ELECTION_TIMEOUT=1000
-    - MONITOR_NODE_ID=3
-    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
-    ports:
-    - 50003:50003
-    - 50013:50013
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   no_colab_productions_filter:
@@ -299,10 +185,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -310,9 +192,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=no_colab_productions_filter_1
     image: no_colab_productions_filter:latest
     links:
@@ -323,7 +205,7 @@ services:
       dockerfile: rabbitmq.dockerfile
     healthcheck:
       interval: 5s
-      retries: 20
+      retries: 50
       test: rabbitmq-diagnostics check_port_connectivity
       timeout: 1s
     ports:
@@ -338,10 +220,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -350,62 +228,11 @@ services:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
     - JOINER_INSTANCE_ID=ratings-1
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=ratings_joiner_1
     image: ratings_joiner:latest
-    links:
-    - rabbitmq
-  sentiment_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
-    container_name: sentiment_aggregator
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=sentiment_aggregator
-    links:
-    - rabbitmq
-  sentiment_filter:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    container_name: sentiment_filter_1
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=sentiment_filter_1
-    image: sentiment_filter:latest
     links:
     - rabbitmq
   top_10_credits_aggregator:
@@ -416,10 +243,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -427,9 +250,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=top_10_credits_aggregator
     links:
     - rabbitmq
@@ -441,10 +264,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -452,9 +271,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=top_5_countries_aggregator
     links:
     - rabbitmq
@@ -466,10 +285,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -477,9 +292,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_arg_aggregator
     links:
     - rabbitmq
@@ -491,10 +306,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -502,9 +313,9 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_arg_esp_aggregator
     links:
     - rabbitmq
@@ -516,10 +327,6 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -527,33 +334,10 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_filter_1
-    image: twentieth_century_filter:latest
-    links:
-    - rabbitmq
-  twentieth_century_filter_2:
-    container_name: twentieth_century_filter_2
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=twentieth_century_filter_2
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
@@ -564,13 +348,9 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
     environment:
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - MONITOR_HOSTS=monitor_1
+    - MONITOR_PORTS=50001
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=worker
     image: worker:latest
