--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,8 @@ monitors:
 clients:
   - id: 1
     files_path: ./files/long
+  - id: 2
+    files_path: ./files/long
 
 workers:
   twentieth_century:
@@ -30,7 +32,7 @@ workers:
     log_level: INFO
     kill: true
   sentiment:
-    count: 1
+    count: 3
     log_level: INFO
     kill: true
   arg_production:
@@ -38,13 +40,17 @@ workers:
     log_level: INFO
     kill: true
   credits:
-    count: 1
+    count: 2
     log_level: INFO
     kill: true
   ratings:
-    count: 1
+    count: 2
     log_level: INFO
     kill: true
+client_decodifier:
+  count: 1
+  log_level: INFO
+  kill: true
 
 aggregators:
   twentieth_century_arg_esp:
