--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,29 @@ services:
     image: arg_production_filter:latest
     links:
     - rabbitmq
+  arg_production_filter_2:
+    container_name: arg_production_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=100
+    - SERVICE_NAME=arg_production_filter_2
+    image: arg_production_filter:latest
+    links:
+    - rabbitmq
   best_and_worst_ratings_aggregator:
     build:
       context: .
@@ -50,6 +73,8 @@ services:
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
+    ports:
+    - 60002:60002
   client_1:
     build:
       context: .
@@ -78,6 +103,62 @@ services:
     - ./files/long/credits.csv:/root/files/credits.csv
     - ./files/long/ratings.csv:/root/files/ratings.csv
     - ./results/long/results.json:/root/results/results.json
+  client_2:
+    build:
+      context: .
+      dockerfile: client/client.dockerfile
+    container_name: client_2
+    depends_on:
+      client_decodifier:
+        condition: service_healthy
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - DECODIFIER_HOST=client_decodifier
+    - DECODIFIER_PORT=50000
+    - CLIENT_ID=2
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=100
+    - SERVICE_NAME=client_2
+    volumes:
+    - ./files/short/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short/credits.csv:/root/files/credits.csv
+    - ./files/short/ratings.csv:/root/files/ratings.csv
+    - ./results/short/results.json:/root/results/results.json
+  client_3:
+    build:
+      context: .
+      dockerfile: client/client.dockerfile
+    container_name: client_3
+    depends_on:
+      client_decodifier:
+        condition: service_healthy
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - DECODIFIER_HOST=client_decodifier
+    - DECODIFIER_PORT=50000
+    - CLIENT_ID=3
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=100
+    - SERVICE_NAME=client_3
+    volumes:
+    - ./files/short/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short/credits.csv:/root/files/credits.csv
+    - ./files/short/ratings.csv:/root/files/ratings.csv
+    - ./results/short/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
@@ -101,7 +182,7 @@ services:
     - SERVICE_NAME=client_decodifier
     healthcheck:
       interval: 5s
-      retries: 10
+      retries: 50
       test: netstat -ltn | grep -c 5000
       timeout: 2s
     ports:
@@ -126,10 +207,38 @@ services:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
     - JOINER_INSTANCE_ID=credits-1
+    - AGGREGATOR_HOST=top_10_credits_aggregator
+    - AGGREGATOR_PORT=60000
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=100
     - SERVICE_NAME=credits_joiner_1
+    image: credits_joiner:latest
+    links:
+    - rabbitmq
+  credits_joiner_2:
+    container_name: credits_joiner_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - JOINER_INSTANCE_ID=credits-3
+    - AGGREGATOR_HOST=top_10_credits_aggregator
+    - AGGREGATOR_PORT=60000
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=100
+    - SERVICE_NAME=credits_joiner_2
     image: credits_joiner:latest
     links:
     - rabbitmq
@@ -200,7 +309,7 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
+    - LOG_LEVEL=DEBUG
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=100
@@ -223,7 +332,7 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
+    - LOG_LEVEL=DEBUG
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=100
@@ -245,7 +354,7 @@ services:
     - ELECTION_TIMEOUT=1000
     - MONITOR_NODE_ID=1
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,client_3,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -265,7 +374,7 @@ services:
     - ELECTION_TIMEOUT=1000
     - MONITOR_NODE_ID=2
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,client_3,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -285,7 +394,7 @@ services:
     - ELECTION_TIMEOUT=1000
     - MONITOR_NODE_ID=3
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,client_2,client_3,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50003:50003
     - 50013:50013
@@ -317,13 +426,36 @@ services:
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
+  no_colab_productions_filter_2:
+    container_name: no_colab_productions_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=100
+    - SERVICE_NAME=no_colab_productions_filter_2
+    image: no_colab_productions_filter:latest
+    links:
+    - rabbitmq
   rabbitmq:
     build:
       context: ./rabbitmq
       dockerfile: rabbitmq.dockerfile
     healthcheck:
       interval: 5s
-      retries: 20
+      retries: 50
       test: rabbitmq-diagnostics check_port_connectivity
       timeout: 1s
     ports:
@@ -350,6 +482,8 @@ services:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
     - JOINER_INSTANCE_ID=ratings-1
+    - AGGREGATOR_HOST=best_and_worst_ratings_aggregator
+    - AGGREGATOR_PORT=60002
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=100
@@ -357,11 +491,8 @@ services:
     image: ratings_joiner:latest
     links:
     - rabbitmq
-  sentiment_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
-    container_name: sentiment_aggregator
+  ratings_joiner_2:
+    container_name: ratings_joiner_2
     depends_on:
       monitor_1:
         condition: service_started
@@ -376,36 +507,14 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
+    - JOINER_INSTANCE_ID=ratings-3
+    - AGGREGATOR_HOST=best_and_worst_ratings_aggregator
+    - AGGREGATOR_PORT=60002
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=sentiment_aggregator
-    links:
-    - rabbitmq
-  sentiment_filter:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    container_name: sentiment_filter_1
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=sentiment_filter_1
-    image: sentiment_filter:latest
+    - SERVICE_NAME=ratings_joiner_2
+    image: ratings_joiner:latest
     links:
     - rabbitmq
   top_10_credits_aggregator:
@@ -433,6 +542,8 @@ services:
     - SERVICE_NAME=top_10_credits_aggregator
     links:
     - rabbitmq
+    ports:
+    - 60000:60000
   top_5_countries_aggregator:
     build:
       context: .
